# clinrecparse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docs/: backend-export.md  chunking-contract.md  data-integrity-gates.md  frontend-export.md  parsed-data-contract.md  parsed-layer.md  parsed-showcase.md  parser-architecture.md  raw-downloader.md  search-rag-export.md
docs/adr/: ADR-assets-by-sha.md  ADR-parsed-html.md
reports/: 843_1-showcase-parsed-parity.json  codex-baseline.md  parser-consolidation-inventory.md  parser-consolidation-summary.json  previous-vs-corrected-showcase.md  showcase-baseline.md
scripts/: verify_showcase_parsed_parity.py
src/clinrec/: __init__.py  cli.py  config.py  logging.py
src/clinrec/api/: __init__.py  catalog_sync.py  client.py  document_download.py  rate_limit.py  version_discovery.py
src/clinrec/bank/: __init__.py  accepted.py  candidate.py  common.py  current.py  decisions.py  identities.py  previous.py  qa.py  reconcile.py  reconcile_helpers.py  references.py  run.py  statuses.py  transaction.py
src/clinrec/models/: external.py
src/clinrec/parsed/: __init__.py  html.py  layer.py  models.py  pipeline.py  showcase.py  source_inventory.py
src/clinrec/parsing/: document.py
src/clinrec/qa/: __init__.py  checks.py
tests/fixtures/: 270_1_403.html  catalog_270_2_270_3_real_shape.json  catalog_843_1_real_shape.json  catalog_success.json  clinrec_270_2.json  clinrec_270_2_real_shape.json  clinrec_270_3.json  clinrec_270_3_real_shape.json  clinrec_773_2_real_shape.json  clinrec_843_1.json  clinrec_843_1_real_shape.json  corrupted.json  html_error.html  html_error_200.html  nko_list_real_shape.json  nko_list_success.json  unexpected_content.txt
tests/integration/: test_api_client.py  test_document_download_integration.py  test_sync_services.py  test_version_discovery_integration.py
tests/unit/: test_bank_pipeline.py  test_catalog_sync.py  test_cli.py  test_config.py  test_document_download.py  test_document_parse.py  test_external_models.py  test_parsed_layer.py  test_parsed_showcase.py  test_research_corpus.py  test_version_discovery.py
(+10 files in other folders)
