[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinrec"
version = "0.1.0"
description = "Pipeline skeleton for downloading and parsing Russian Ministry of Health clinical recommendations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.15.0",
    "httpx==0.28.1",
    "lxml==6.1.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "PyYAML==6.0.3",
    "rapidfuzz==3.14.5",
    "structlog==26.1.0",
    "typer==0.26.7",
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pytest==9.1.1",
    "ruff==0.15.19",
    "types-PyYAML==6.0.12.20260518",
]

[project.scripts]
clinrec = "clinrec.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["clinrec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
